--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
-    "express-validator": "^7.2.0"
+    "express-validator": "^7.2.0",
+    "firebase-admin": "^12.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
